sprint 3 project spots

--- a/index.html
+++ b/index.html
@@ -12,12 +12,147 @@
   <body>
     <div class="page">
       <header class="header">
+        <img src="images/logo.svg" alt="Spots logo" class="header__logo" />
+      </header>
       <main class="content">
-        <section class="profile"></section>
+        <section class="profile page__section">
+          <img
+            src="images/avatar.jpg"
+            alt="Profile Picture"
+            class="profile__avatar"
+          />
+          <div class="profile__column">
+            <h1 class="profile__name">Bessie Coleman</h1>
+            <p class="profile__description">Civil Aviator</p>
+            <button type="button" class="profile__edit-btn">
+              <img
+                src="images/pencil-icon.svg"
+                alt="Pencil Icon"
+                class="profile__edit-button"
+              />
+              Edit profile
+            </button>
+          </div>
+          <button type="button" class="profile__add-btn">
+            <img
+              src="images/plus-sign.svg"
+              alt="Plus Icon"
+              class="profile__button-plus"
+            />New Post
+          </button>
+        </section>
 
-        <section class="cards"></section>
+        <section class="cards page__section">
+          <div class="card">
+            <img
+              src="images/1-photo-by-moritz-feldmann-from-pexels.jpg"
+              alt="Snowy mountain town through window"
+              class="card__image"
+            />
+            <div class="card__content">
+              <p class="card__description">Val Thorens</p>
+              <button type="button" class="card__button">
+                <img
+                  src="images/heart.svg"
+                  alt="Heart Icon"
+                  class="card__like"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="images/2-photo-by-ceiline-from-pexels.jpg"
+              alt="Restaurant terrace"
+              class="card__image"
+            />
+            <div class="card__content">
+              <p class="card__description">Restaurant terrace</p>
+              <button type="button" class="card__button">
+                <img
+                  src="images/heart.svg"
+                  alt="Heart Icon"
+                  class="card__like"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="images/3-photo-by-tubanur-dogan-from-pexels.jpg"
+              alt="People sitting at outdoor tables"
+              class="card__image"
+            />
+            <div class="card__content">
+              <p class="card__description">An outdoor cafe</p>
+              <button type="button" class="card__button">
+                <img
+                  src="images/heart.svg"
+                  alt="Heart Icon"
+                  class="card__like"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="images/4-photo-by-maurice-laschet-from-pexels.jpg"
+              alt="Very long bride over forest"
+              class="card__image"
+            />
+            <div class="card__content">
+              <p class="card__description">
+                A very long bridge, over the forest
+              </p>
+              <button type="button" class="card__button">
+                <img
+                  src="images/heart.svg"
+                  alt="Heart Icon"
+                  class="card__like"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
+              alt="Tunel with windows"
+              class="card__image"
+            />
+            <div class="card__content">
+              <p class="card__description">Tunnel with morning light</p>
+              <button type="button" class="card__button">
+                <img
+                  src="images/heart.svg"
+                  alt="Heart Icon"
+                  class="card__like"
+                />
+              </button>
+            </div>
+          </div>
+          <div class="card">
+            <img
+              src="images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+              alt="Cabin in snowy woods"
+              class="card__image"
+            />
+            <div class="card__content">
+              <p class="card__description">Mountain house</p>
+              <button type="button" class="card__button">
+                <img
+                  src="images/heart.svg"
+                  alt="Heart Icon"
+                  class="card__like"
+                />
+              </button>
+            </div>
+          </div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+
+      <footer class="footer">
+        <p class="footer__copyright">2023 © Spots</p>
+      </footer>
     </div>
   </body>
 </html>
