--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             />
             <div class="card__content">
               <p class="card__description">
-                A very long bridge, over the forest
+                A very long bridge, over the forest national to state
               </p>
               <button type="button" class="card__button">
                 <img
