--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <p class="footer__copyright">2023 © Spots</p>
       </footer>
 
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -182,7 +182,7 @@
         </div>
       </div>
 
-      <div class="modal modal_is-opened">
+      <div class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
