add js file and button interaction

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <p class="footer__copyright">2023 © Spots</p>
       </footer>
 
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -182,7 +182,7 @@
         </div>
       </div>
 
-      <div class="modal">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New post</h2>
@@ -210,6 +210,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
