--- a/index.html
+++ b/index.html
@@ -210,6 +210,6 @@
         </div>
       </div>
     </div>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
