add validation.js with error messages etc

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             aria-label="Close modal"
           ></button>
           <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="profile-name-input" class="modal__label">
               Name
               <input
@@ -87,7 +87,10 @@
                 class="modal__input"
                 placeholder="Type your name"
                 required
+                minlength="2"
+                maxlength="40"
               />
+              <span id="profile-name-input-error" class="modal__error"></span>
             </label>
             <label for="profile-description-input" class="modal__label">
               Description
@@ -97,7 +100,13 @@
                 class="modal__input"
                 placeholder="Describe yourself"
                 required
+                minlength="2"
+                maxlength="200"
               />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -112,7 +121,7 @@
             aria-label="Close modal"
           ></button>
           <h2 class="modal__title">New post</h2>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="post-image-input" class="modal__label">
               Image link
               <input
@@ -122,6 +131,7 @@
                 placeholder="Paste a link to the picture"
                 required
               />
+              <span id="post-image-input-error" class="modal__error"></span>
             </label>
             <label for="post-caption-input" class="modal__label">
               Caption
@@ -131,7 +141,10 @@
                 class="modal__input"
                 placeholder="Type your caption"
                 required
+                minlength="2"
+                maxlength="30"
               />
+              <span id="post-caption-input-error" class="modal__error"></span>
             </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -151,5 +164,6 @@
       </div>
     </div>
     <script src="scripts/index.js"></script>
+    <script src="scripts/validation.js"></script>
   </body>
 </html>
